$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.356 2006/06/07 17:42:27 fanf2 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.63
-----------------

SC/01 Use a glob alias rather than an array ref in eximstats generated
      parser. This improves both readability and performance.

SC/02 Collect SpamAssassin and rejection statistics in eximstats.
      Don't display local sender or destination tables in eximstats unless
      there is data to show.
      Added average volumes into the eximstats top table text output.

SC/03 Collect data on the number of addresses (recipients) as well
      as the number of messages in eximstats.

TF/01 Correct an error in the documentation for the redirect router. Exim
      does (usually) call initgroups() when daemonizing.

TF/02 Call initgroups() when dropping privilege in exim.c, so that Exim runs with
      consistent privilege compared to when running as a daemon.

TF/03 Note in the spec that $authenticated_id is not set for local
      submissions from trusted users.

TF/04 The ratelimit per_rcpt option now works correctly in acl_not_smtp.
      Thanks to Dean Brooks <dean@iglou.com> for the patch.

TF/05 Make it easier to get SMTP authentication and TLS/SSL support working
      by adding some example configuration directives to the default
      configuration file. A little bit of work is required to uncomment the
      directives and define how usernames and passwords are checked, but
      there is now a framework to start from.


Exim version 4.62
-----------------

TF/01 Fix the add_header change below (4.61 PH/55) which had a bug that (amongst
      other effects) broke the use of negated acl sub-conditions.

PH/01 ${readsocket now supports Internet domain sockets (modified John Jetmore
      patch).

PH/02 When tcp-wrappers is called from Exim, it returns only "deny" or "allow".
      "Deny" causes Exim to reject the incoming connection with a 554 error.